# codriver

./: .gitignore  PHASE2-PLAN.md  README.md
.github/workflows/: ci.yml
app/: README.md  analysis_options.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/codriver/: MainActivity.kt
app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
app/ios/Flutter/ephemeral/: flutter_native_integration.env
app/ios/Runner/: GeneratedPluginRegistrant.m
app/lib/: main.dart
app/lib/ai/: .gitkeep
app/lib/analysis/: .gitkeep
app/lib/models/: .gitkeep
app/lib/platform_bridge/: engine_ffi.dart  sensor_channel.dart
app/lib/services/: .gitkeep
app/lib/ui/screens/: analysis_screen.dart
app/lib/ui/widgets/: speed_chart.dart
app/lib/utils/: .gitkeep
app/test/: widget_test.dart
app/web/: index.html  manifest.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: analysis.py  coach.py  sessions.py  tracks.py
backend/app/core/: config.py  supabase.py
backend/app/llm/: coach_client.py
backend/app/models/: schemas.py
backend/tests/: test_health.py
docs/: api-design.md  architecture.md  coordinate-systems.md  development.md
reviews/: COLLABORATION.md  INDEX.md  MERGE-NOTES.md  PROGRESS.md  REVIEW-PLAN.md  REVIEW-PROTOCOL.md  monitor-review.md  onboarding-for-worker.md  worker-progress.md
shared_engine/: CMakeLists.txt  conanfile.txt
shared_engine/include/codriver/: analysis_pipeline.h  best_lap_finder.h  brake_detector.h  c_api.h  coach_engine.h  coach_template.h  coord_transform.h  corner_detector.h  corner_speed_compare.h  kalman_filter.h  lap_timer.h  root_cause.h  session_stats.h  types.h
shared_engine/src/: analysis_pipeline.cpp  best_lap_finder.cpp  brake_detector.cpp  c_api.cpp  coach_engine.cpp  coach_template.cpp  coord_transform.cpp  corner_detector.cpp  corner_speed_compare.cpp  kalman_filter.cpp  lap_timer.cpp  root_cause.cpp  session_stats.cpp
shared_engine/tests/: test_main.cpp
