[project]
name = "codriver-backend"
version = "0.1.0"
description = "CoDriver AI Track Driving Coach Backend"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = false  # Relaxed for Phase 0; enable strict when models are complete
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
